GL/Projet_GL/src/test/deca/context/invalid/params/param.deca
// Description:
//    Declaration de parametre
//
// Resultats:
//    Un parametre ne peut pas etre de type void.
//    Erreur affichée: Parameter cannot be of type void
//

class A {
    int f(void x) {
        return 0;
    }
}
{
}
